comit al master vercion mas reciente

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <h1>Buen dia</h1>
-    <p>Que lindo dia hace</p>
+    <main>
+
+        <section>
+            <h1>Buen dia</h1>
+            <p>Que lindo dia hace</p>
+        </section>
+
+    </main>
 </body>
 
 </html>
