commit en cabezera

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <main>
 
         <section>
+            <div class="cabezera">
+                cabezera
+            </div>
+
             <h1>Buen dia</h1>
             <p>Que lindo dia hace</p>
         </section>
