--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <h1>Buen dia</h1>
             <p>Que lindo dia hace</p>
         </section>
-
+        <section>
+            <h4>me gusta leer</h4>
+            <p>cualquier tema XD</p>
+        </section>
     </main>
 </body>
 
