--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <main>
 
         <section>
-            <div class="cabezera">
-                cabezera
+            <div class="cabezzera">
+                cabezzera
             </div>
 
             <h1>Buen dia</h1>
