una nueva vercion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <section>
             <div class="cabecera">
-                cabecera
+                atracera
             </div>
 
             <h1>Buen dia</h1>
